# pathsim

./: .gitignore  conftest.py  pyproject.toml
.github/workflows/: pypi_deployment.yml  tests_codecov.yml
docs/source/: conf.py  index.rst  roadmap_generated.rst
docs/source/_static/: redirect.js
docs/source/examples/: checkpoints.ipynb  fmu_model_exchange_bouncing_ball.ipynb  fmu_model_exchange_vanderpol.ipynb
docs/source/modules/: pathsim.blocks.discrete.rst  pathsim.blocks.fmu.rst  pathsim.blocks.rst
examples/: example_cascade.py  example_cstr_fit.py  example_cstr_tss_fit.py  example_linear_fit.py  example_noise.py  example_schur_multiexp.py  example_sensitivity_pk.py  example_simple_fit.py  example_tritium_fit.py
src/pathsim/: __init__.py  _constants.py  connection.py  exceptions.py  simulation.py  subsystem.py
src/pathsim/blocks/: __init__.py  _block.py  adder.py  bvp.py  (+32 more)
src/pathsimjs/: Connection.js  README.md  Simulation.js  constants.js  index.js  package.json
tests/evals/: README_FMU_TESTS.md  conftest.py  create_simple_fmu.py  download_test_fmu.py  test_counter_comparator_system.py  test_dynamical_system_ivp.py  test_logic_system.py  test_me_analytical.py  test_me_fmu_system.py  test_me_fmu_validation.py  test_relay_thermostat_system.py  test_rescale_delay_system.py  test_signal_processing_system.py  test_steadystate_transient_system.py  test_switch_lti_system.py  validate_me_fmu.py
tests/pathsim/: test_auto_initial_step.py  test_checkpoint.py  test_connection.py  test_diagnostics.py  test_simulation.py  test_simulation_pss.py  test_subsystem.py
(+81 files in other folders)
