[build-system]
requires = ["setuptools", "wheel", "setuptools-scm[toml] >= 7.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "pathsim"
dynamic = ["version"]
description = "A differentiable block based hybrid system simulation framework."
readme = "README.md"
authors = [{ name = "Milan Rother", email = "milan.rother@gmx.de" }]
license = { text = "MIT" }
keywords = ["simulation", "differentiable", "hybrid systems"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = ["numpy>=1.15", "matplotlib>=3.1", "scipy>=1.2"]

[project.optional-dependencies]
rf = ["scikit-rf"]
test = ["pytest", "pytest-cov", "pytest-xdist", "FMPy", "scikit-rf"]
fmi = ["FMPy"]

[project.urls]
Homepage = "https://github.com/pathsim/pathsim"
documentation = "https://pathsim.readthedocs.io/en/latest/"

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: long-running integration / eval tests (deselected by default, use -m slow or --run-all)",
]

[tool.setuptools_scm]
write_to = "src/pathsim/_version.py"
